--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,32 +1,34 @@
 {
-  "name": "Python 3",
-  "image": "mcr.microsoft.com/devcontainers/python:0-3.10-bullseye",
-  "features": {
-    "ghcr.io/devcontainers-contrib/features/black:1": {},
-    "ghcr.io/devcontainers-contrib/features/meltano": {},
-    "ghcr.io/devcontainers/features/node:1": {},
-    "ghcr.io/eitsupi/devcontainer-features/duckdb-cli:1": {},
-    "ghcr.io/eitsupi/devcontainer-features/go-task:1": {}
-  },
-  // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "task deps",
-  "remoteEnv": {
-    "DATABASE": "duckdb",
-    "FILENAME": "jaffle_shop.duckdb"
-  },
-  // Configure tool-specific properties
-  "customizations": {
-    "vscode": {
-      "settings": {
-        "terminal.integrated.defaultProfile.linux": "zsh"
-      },
-      "extensions": [
-        "dorzey.vscode-sqlfluff",
-        "esbenp.prettier-vscode",
-        "GitHub.codespaces"
-      ]
-    }
-  }
+    "id": "python",
+    "version": "4.0.2",
+    "name": "Python 3",
+    "description": "Develop Python 3 applications.",
+    "documentationURL": "https://github.com/devcontainers/templates/tree/main/src/python",
+    "publisher": "Dev Container Spec Maintainers",
+    "licenseURL": "https://github.com/devcontainers/templates/blob/main/LICENSE",
+    "options": {
+        "imageVariant": {
+            "type": "string",
+            "description": "Python version (use -bookworm, or -bullseye variants on local arm64/Apple Silicon):",
+            "proposals": [
+                "3-bookworm",
+                "3.12-bookworm",
+                "3.11-bookworm",
+                "3.10-bookworm",
+                "3.9-bookworm",
+                "3.8-bookworm",
+                "3-bullseye",
+                "3.12-bullseye",
+                "3.11-bullseye",
+                "3.10-bullseye",
+                "3.9-bullseye",
+                "3.8-bullseye"
+            ],
+            "default": "3.12-bullseye"
+        }
+    },
+    "platforms": ["Python"],
+    "optionalPaths": [
+        ".github/*"
+    ]
 }
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/python
