--- a/profiles.yml
+++ b/profiles.yml
@@ -10,3 +10,14 @@ postgres-pim:
       schema: dbt_pim
       threads: 4
   target: dev
+
+databricks-pim:
+   target: databricks_job
+   outputs:
+     databricks_job:
+      type: databricks
+      method: http
+      schema: "deel_eor"
+      host: "adb-8786953221073452.12.azuredatabricks.net"
+      http_path: "sql/protocolv1/o/8786953221073452/0701-124211-umlrtdch"
+      token: "dbtu_9jpvcvM9rskNEH4pg1nE5jobFkF7HhZeo_OqtmOxsO216IchGo"
