--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@ name: 'deelhometask'
 version: "1.0.0"
 config-version: 2
 
-profile: "postgres-pim"
+profile: "databricks-pim"
 
 model-paths: ["models"]
 analysis-paths: ["analyses"]
